--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,10 +1,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- Bootstrap CSS -->
 <link rel="stylesheet" href="/css/bootstrap.min.css" />
-<!-- Archivos CSS personalizados -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 <link rel="stylesheet" href="/static/css/style.css" />
 <link rel="stylesheet" href="/static/css/login.css" />
+<link rel="stylesheet" href="/static/css/productos.css" />
 <title>Inicio</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6633654530665325"
      crossorigin="anonymous"></script>
