--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,20 +9,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active fw-medium text-white" aria-current="page" href="">Inicio</a>
+                    <a href="/" class="nav-link active fw-medium text-white" aria-current="page" href="">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active fw-medium text-white" aria-current="page" href="">Tienda</a>
+                    <a href="/tienda" class="nav-link active fw-medium text-white" aria-current="page" href="">Tienda</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Categorías
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="">Categoría 1</a></li>
-                        <li><a class="dropdown-item" href="">Categoría 2</a></li>
-                        <li><a class="dropdown-item" href="">Categoría 3</a></li>
-                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active fw-medium text-white" aria-current="page" href="">Sobre Nosotros</a>
@@ -34,6 +29,13 @@
             </form>
             <ul class="navbar-nav ms-auto">
                 <% if (usuario) { %>
+                    <% if (usuario.rol === 1) { %>
+                        <li class="nav-item">
+                            <a class="nav-link contact-button fw-medium text-white" href="/admin/productos">
+                                <i class="bi bi-gear"></i> Administrador
+                            </a>
+                        </li>
+                    <% } %>
                     <li class="nav-item">
                         <a class="nav-link contact-button fw-medium text-white iniciar-sesion-btn" href="/perfil">Mi Perfil</a>
                     </li>
